Corrected search entry spacing #4

--- a/css/layout.css
+++ b/css/layout.css
@@ -8,6 +8,10 @@
   padding: 0 1.5rem;
 }
 
+.display-block {
+  display: block;
+}
+
 .row {
   display: flex;
 }
@@ -19,11 +23,13 @@
 .column-10 {
   flex-basis: 10%;
   height: 100%;
+  min-height: 40px;
 }
 
 .column-90 {
   height: 100%;
   flex-basis: 90%;
+  min-height: 40px;
 }
 
 .column-full,
