--- a/css/styles.css
+++ b/css/styles.css
@@ -135,12 +135,14 @@ body {
 }
 
 .results-entry .image-wrapper {
-  height: 100%;
-  width: 35px;
+  width: 90%;
+  max-width: 80px;
 }
 
 .results-entry .image-wrapper img {
   height: 100%;
+  min-height: 40px;
+  max-height: 40px;
   width: 100%;
   object-fit: cover;
 }
@@ -148,7 +150,7 @@ body {
 .results-entry-platform,
 .results-entry-content {
   font-size: 14px;
-  height: 50%;
+  min-height: 20px;
   padding: 0 0.5rem;
 }
 
